--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 appcompat = "1.6.1"
+kotlinxSerializationJson = "1.7.3"
 ktorClientCio = "2.3.7"
 ktorClientCore = "2.3.9"
 lifecycleViewmodelCompose = "2.8.0"
@@ -16,7 +17,7 @@ activity = "1.8.0"
 constraintlayout = "2.1.4"
 composeBom = "2023.08.00"
 material3Android = "1.3.0-alpha05"
-navigationCompose = "2.7.7"
+navigationCompose = "2.8.4"
 postgrestKt = "2.2.3"
 realtimeKt = "2.2.3"
 roomCompiler = "2.6.1"
@@ -45,6 +46,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktorClientCio" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCore" }
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktorClientCore" }
@@ -71,4 +73,5 @@ jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "k
 compose-compiler = {id ="org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin"}
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
 google-firebase-crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "googleFirebaseCrashlytics" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
