--- a/tv/src/main/AndroidManifest.xml
+++ b/tv/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
         android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".SetupBoxApplication"
+
         android:theme="@style/Theme.SetupBox.MySplash">
         <activity
-            android:name=".Screens.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
